[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rspace"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "serde?/alloc",
    "rspace-core/alloc",
]

serde = [
    "dep:serde",
    "rspace-core/serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "rspace-core/std",
    "serde?/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]

[dependencies.rspace-core]
default-features = false
path = "../core"
version = "0.0.0"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
